--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -17,9 +17,9 @@ div.tooltip.badge-tooltip {
   &>div:last-child>p, &>div:last-child { display: inline; margin: 0; word-wrap: break-word; }
 }
 
-#users-list-soul, #pm-users-list-container, #pm-add-users-list-container, #town-add-users-list-container {
+#users-list-soul, #pm-users-list-container, #pm-add-users-list-container, #town-add-users-list-container, .add-users-list-container {
     position: relative; overflow: visible;
-    #users-list, #pm-users-list, #pm-add-users-list, #town-add-users-list {
+    #users-list, #pm-users-list, #pm-add-users-list, #town-add-users-list, .add-users-list {
         position: absolute; margin: 0; display: block; background: @myhordes-cell-header-background-color;
         width:300px; max-height: 200px; overflow: auto; z-index: 1; border: 1px solid @myhordes-smalltext;
         outline: 1px solid black; box-shadow: 0 0 3px black;
