--- a/templates/ajax/forum/editor.html.twig
+++ b/templates/ajax/forum/editor.html.twig
@@ -98,6 +98,21 @@
                     {% if permission.format_oracle() %}
                         <div x-forum-action="modal" x-text-modal-node="poll" class="forum-button"><i class="fa fa-poll"></i><span class="forum-button-tooltip">{{ 'Umfrage einfügen'|trans({},'global') }}</span></div>
                     {% endif %}
+
+                    <div class="forum-toggle" style="max-width: 200px; vertical-align: top;">
+                        <div class="row-flex toggle-target">
+                            <div class="cell"><div x-forum-action="toggle" x-text-modal-node="@" class="forum-button"><i class="fas fa-user"></i><span class="forum-button-tooltip">{{ 'Spielernamen einfügen'|trans({},'global') }}</span></div></div>
+                            <div class="cell hidden">
+                                <div id="{{ type }}-editor-add-users-list-container" class="add-users-list-container">
+                                    <div><label><input type="text" id="{{ type }}-editor-add-users-search" class="add-users-search" /></label><div class="tooltip help">{{ 'Gib den Pseudo des Bürgers ein.'|trans({},'soul') }}</div></div>
+                                    <div id="{{ type }}-editor-add-users-list" class="add-users-list"></div>
+                                </div>
+                            </div>
+                            <div class="cell hidden">
+                                <div style="margin-left: 5px;" x-forum-action="toggle" x-text-modal-node="@" class="forum-button" id="{{ type }}-editor-add-users-close"><i class="fas fa-times"></i><span class="forum-button-tooltip">{{ 'Abbrechen'|trans({},'global') }}</span></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -295,7 +310,18 @@
                 node_transfer_source.value = cache;
                 transfer_to_preview();
             }
+            $.html.addEventListenerAll( '[x-forum-action="toggle"]', 'click', function (e,elem) {
+                let parent = elem.parentElement;
+                while (parent && !parent.classList.contains('toggle-target'))
+                    parent = parent.parentElement;
 
+                if (!parent) return;
+
+                for (let i = 0; i < parent.children.length; i++)
+                    if (parent.children[i].classList.contains('hidden'))
+                        parent.children[i].classList.remove('hidden');
+                    else parent.children[i].classList.add('hidden');
+            });
             $.html.addEventListenerAll( '[x-forum-action="modal"]', 'click', function (e,elem) {
                 e.preventDefault();
                 e.stopPropagation();
@@ -725,6 +751,54 @@
                     else e.classList.add('hidden');
                 }
             })
+
+            let typingTimer, doneTypingInterval = 500;
+            let searchBox = document.getElementById('{{ type }}-editor-add-users-search');
+            const userSearchHandler = function() {
+                if (searchBox.value.length >= 3) {
+                    $.ajax.background().load(
+                        document.getElementById('{{ type }}-editor-add-users-list'),
+                        '{{ path('users_fuzzyfind', {url: 'post_add_users'}) }}',
+                        false,
+                        {'name': searchBox.value},
+                        function () {
+                            $.html.addEventListenerAll('#{{ type }}-editor-add-users-list>.users-list-entry>div', 'click', function (e, elem) {
+
+                                const before = node_transfer_source.value.substr( 0, node_transfer_source.selectionStart );
+                                const selected = node_transfer_source.value.substr( node_transfer_source.selectionStart,  node_transfer_source.selectionEnd - node_transfer_source.selectionStart );
+                                const after = node_transfer_source.value.substr( node_transfer_source.selectionEnd );
+
+                                const node = '@' + elem.getAttribute('x-soul-name') + ':' + elem.getAttribute('x-soul-id');
+
+                                node_transfer_source.value = before + node + after;
+                                node_transfer_source.setSelectionRange( before.length, before.length + node.length );
+                                node_transfer_source.focus();
+                                transfer_to_preview();
+
+                                searchBox.value = document.getElementById('{{ type }}-editor-add-users-list').innerHTML = '';
+                                document.getElementById('{{ type }}-editor-add-users-close').click();
+                            })
+                        }
+                    );
+                }
+                else document.getElementById('{{ type }}-editor-add-users-list').innerHTML = '';
+            };
+
+            const userSearchHandlerUp = function () {
+                clearTimeout(typingTimer);
+                typingTimer = setTimeout(userSearchHandler, doneTypingInterval);
+            };
+
+            const userSearchHandlerDown = function () {
+                clearTimeout(typingTimer);
+            };
+
+            if (searchBox) {
+                searchBox.addEventListener('keyup', userSearchHandlerUp);
+                searchBox.addEventListener('keydown', userSearchHandlerDown);
+                searchBox.addEventListener('focus', () => userSearchHandler());
+                searchBox.addEventListener('blur', () => setTimeout( () => document.getElementById('{{ type }}-editor-add-users-list').innerHTML = '', 500));
+            }
         })();
     </script>
 {% endblock %}
