--- a/templates/ajax/forum/posts.html.twig
+++ b/templates/ajax/forum/posts.html.twig
@@ -530,9 +530,13 @@
                             structure.appendChild(button);
                             document.querySelector('.forum-post-content ul.poll[x-poll-id="' + key + '"]').appendChild(structure);
                         } else {
-                            let total = 0;
-                            database[key].forEach(answer => {total += answer[1];});
+                            let total = 0; let can_close = false;
                             database[key].forEach(answer => {
+                                if (answer[0] > 0) total += answer[1];
+                                else if (answer[0] === -666) can_close = answer[1];
+                            });
+                            database[key].forEach(answer => {
+                                if (answer[0] <= 0) return;
                                 let answer_object = document.querySelector('.forum-post-content ul.poll[x-poll-id="' + key + '"]>li[x-poll-id="' + key + '"][x-answer-id="' + answer[0] + '"]')
                                 if (answer_object) {
                                     let structure = $.html.createElement('<div class="row-flex wrap"><div class="cell grow-1"></div><div class="cell rw-3 rw-lg-4 rw-sm-12 shrink-0"></div>');
@@ -544,6 +548,17 @@
                                     answer_object.appendChild(structure);
                                 }
                             });
+
+                            if (can_close) {
+                                let button = $.html.createElement('<button class="small inline" />', '{{ 'Umfrage schließen'|trans({},'global') }}');
+                                button.addEventListener('click',() => {
+                                    if (confirm('{{ 'Diese Aktion kann nicht rückgängig gemacht werden. Bist du sicher?'|trans({},'global') }}'))
+                                        $.ajax.easySend( '{{ path('forum_poll_cast_api', {fid: fid, tid: tid}) }}', {poll: key, cast: -666}, reloadPage);
+                                });
+                                let structure = $.html.createElement('<li class="plain right" />');
+                                structure.appendChild(button);
+                                document.querySelector('.forum-post-content ul.poll[x-poll-id="' + key + '"]').appendChild(structure);
+                            }
                         }
                     });
                 } );
