--- a/templates/ajax/forum/view.html.twig
+++ b/templates/ajax/forum/view.html.twig
@@ -95,6 +95,8 @@
                     {% if last_post and last_post.owner %}
                         {% if last_post.owner.name == 'Der Rabe' %}
                             {{ 'Der Rabe'|trans({},'global') }}
+                        {% elseif last_post.owner.name == 'Animateur-Team' %}
+                            {{ 'Animateur-Team'|trans({},'global') }}
                         {% else %}
                             {% set name = town and last_post.owner.citizenFor(town) ? last_post.owner.citizenFor(town).name : last_post.owner.name %}
                             {{ name }}
@@ -102,6 +104,8 @@
                     {% elseif thread.owner %}
                         {% if thread.owner.name == 'Der Rabe' %}
                             {{ 'Der Rabe'|trans({},'global') }}
+                        {% elseif thread.owner.name == 'Animateur-Team' %}
+                            {{ 'Animateur-Team'|trans({},'global') }}
                         {% else %}
                             {% set name = town and thread.owner.citizenFor(town) ? thread.owner.citizenFor(town).name : thread.owner.name %}
                             {{ name }}
