New icon for the animaction team

--- a/templates/ajax/soul/badges.html.twig
+++ b/templates/ajax/soul/badges.html.twig
@@ -38,7 +38,7 @@
 
         {% if user_handler.hasRole(badger, "ROLE_ANIMAC") %}
             <div class="badge badge-animac">
-                <div><i class="fa fa-chess-pawn"></i></div>
+                <div><i class="fas fa-broadcast-tower"></i></div>
                 <div class="tooltip badge-tooltip">
                     <b>{{ 'Animateur'|trans({},'soul') }}</b>
                     {{ 'Diese Karteikarte gehört einem Animateur. Animateure organisieren und koordinieren Community-Events.'|trans({},'soul') }}
