--- a/templates/ajax/admin/dash.html.twig
+++ b/templates/ajax/admin/dash.html.twig
@@ -33,9 +33,13 @@
 
         <div class="row">
             <div class="cell padded header rw-8 ro-2 rw-lg-12 ro-lg-0">
-                <h4>{% trans from 'admin' %}Admin Dashboard{% endtrans %}</h4>
-                <br />
                 {% if is_granted('ROLE_CROW') %}
+                    <h4>{% trans from 'admin' %}Admin Dashboard{% endtrans %}</h4>
+                {% else %}
+                    <h4>{% trans from 'admin' %}Community Dashboard{% endtrans %}</h4>
+                {% endif %}
+                <br />
+                {% if is_granted('ROLE_ELEVATED') %}
                     <h5>{{ 'Aktionen'|trans({},'admin') }}</h5>
                     {% for action in actions %}
                         <button x-ajax-href="{{ path('admin_action', {id: action.id}) }}">{{ action.name|trans({},'admin') }}</button>
