--- a/templates/ajax/ajax.html.twig
+++ b/templates/ajax/ajax.html.twig
@@ -30,12 +30,12 @@
             </div>
         {% endif %}
     {% endblock %}
-    {% if is_granted('ROLE_CROW') and adminActions is defined %}
+    {% if (is_granted('ROLE_CROW') and adminActions is defined) or (is_granted('ROLE_ELEVATED') and comActions is defined) %}
         <div id="modeCommand">
-            <h1><span>{{ 'Moderation'|trans({},'global') }}</span></h1>
+            <h1><span>{{ is_granted('ROLE_CROW') ? 'Moderation'|trans({},'global') : 'Community-Tools'|trans({},'global') }}</span></h1>
             <div id="scrollMenu">
                 <ul>
-                    {% for adminAction in adminActions %}
+                    {% for adminAction in (is_granted('ROLE_CROW') ? adminActions : comActions) %}
                         {# @var adminAction \App\Entity\AdminAction #}
                         <a class="link" {% if app.user.openModToolsSameWindow %}x-ajax-{% endif %}href="{{ path('admin_action', { 'id': adminAction.id }) }}"><span>{{ adminAction.name|trans({},'admin') }}</span></a><br>
                     {% endfor %}
